feat: 効率的なテストランナー実装
問題:
- 毎回サーバー起動の重複
- タイムアウトエラー
- プロセス残存によるポート競合
- 手動でのサーバー管理が必要

解決:
- test-runner.sh: 完全自動化テストランナー
  * プロセスクリーンアップ
  * サーバー起動確認（最大30秒待機）
  * テスト実行
  * 自動クリーンアップ
- スモークテストのタイムアウト延長（3秒→30秒）
- smart-test.shからtest-runner.sh呼び出しに変更
- package.json: test:smoke等をtest-runner.sh経由に変更

利点:
- テストが1.8秒で完了（以前は失敗）
- サーバー管理完全自動化
- トークン無駄遣い解消
- 確実なテスト実行

--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test:ci": "npm run typecheck && npm run build",
-    "test:smoke": "playwright test tests/smoke-fast.spec.ts --project=chromium",
-    "test:smoke:full": "playwright test tests/smoke.spec.ts --project=chromium",
+    "test:smoke": "bash scripts/test-runner.sh smoke-fast",
+    "test:smoke:full": "bash scripts/test-runner.sh smoke",
+    "test:all": "bash scripts/test-runner.sh all",
     "test:smart": "bash scripts/smart-test.sh",
     "test:smoke:ui": "playwright test --project=chromium --ui",
     "test:smoke:debug": "playwright test --project=chromium --debug",
