feat: システム健康診断機能を追加
- コードベースの自己診断スクリプトを実装
- localStorage キー一貫性、重複関数、型定義重複などを検出
- CSS重複、大きすぎるファイル、デバッグコード残留をチェック
- 診断結果レポートを自動生成
- package.jsonにhealth-checkコマンドを追加
- READMEに使用方法と推奨サイクルを記載

診断項目:
- localStorage キーの命名規則統一性
- 重複コンポーネント/関数の検出
- useEffect依存配列の警告チェック
- 未使用変数の検出
- CSSクラス重複検出
- console.log残留チェック
- 型定義重複チェック
- 大きすぎるファイル検出
- import文整理状況確認
- コメントアウトコード検出

実行: npm run health-check

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test:smoke:debug": "playwright test --project=chromium --debug",
     "test:smoke:update": "playwright test --project=chromium --update-snapshots",
     "test:visual": "playwright test tests/visual-comparison.spec.ts --project=chromium",
+    "health-check": "bash scripts/health-check.sh",
     "prepare": "husky"
   },
   "dependencies": {
