feat: データ品質保証システム完全実装
## 新機能
- データ品質チェックスクリプト (Python3)
- CSV/JSON両形式の完全対応
- IPA発音記号とカタカナ読みの詳細検証
- 複数IPA+カタカナペアのパース機能

## チェック項目
1. IPA発音記号の正確性（大文字、無効文字、欠損）
2. カタカナ発音の正確性（英語混入、不適切文字）
3. 意味フィールドの日本語存在
4. 必須フィールドの完全性

## 検証結果
- 15,269エントリを検証
- エラー1,000件検出（初期4,272件から76%削減）
- 警告574件検出

## 主要エラー
- KATAKANA_ENGLISH_MIXED: 436件
- IPA_MISSING: 336件
- MISSING_REQUIRED_FIELD: 150件
- IPA_INVALID_CHARS: 76件

## ドキュメント
- DATA_QUALITY_ASSURANCE.md: 完全ガイドライン（277行）
- DATA_QUALITY_REPORT.md: 検証結果レポート
- QUICK_FIX_GUIDE.md: 修正作業クイックガイド

## 実行方法
```bash
npm run check:data-quality
```

レポート: scripts/output/data-quality-report.txt

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy:beta": "npm run build:beta && gh-pages -d dist-beta -a --dest beta -m 'Deploy beta preview'",
     "preview:beta": "npm run build:beta && vite preview --outDir dist-beta --port 4174",
     "validate": "python3 scripts/validate_all_data.py",
+    "check:data-quality": "bash scripts/check-data-quality.sh",
     "lint:css": "stylelint 'src/**/*.css'",
     "lint:css:fix": "stylelint 'src/**/*.css' --fix",
     "typecheck": "tsc --noEmit",
