--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "deploy:beta": "npm run build:beta && gh-pages -d dist-beta -a --dest beta -m 'Deploy beta preview'",
     "preview:beta": "npm run build:beta && vite preview --outDir dist-beta --port 4174",
     "validate": "python3 scripts/validate_all_data.py",
+    "validate:grammar": "python3 scripts/validate_grammar_advanced.py",
+    "validate:grammar:analyze": "python3 scripts/analyze_grammar_data_quality.py",
     "check:data-quality": "bash scripts/check-data-quality.sh",
+    "check:grammar-quality": "npm run validate:grammar && npm run validate:grammar:analyze",
     "lint:css": "stylelint 'src/**/*.css'",
     "lint:css:fix": "stylelint 'src/**/*.css' --fix",
     "typecheck": "tsc --noEmit",
@@ -20,6 +23,7 @@
     "lint:md": "markdownlint '**/*.md' --ignore node_modules --ignore dist --ignore dist-beta",
     "quality:check": "npm run typecheck && npm run lint:errors-only && npm run lint:css && npm run lint:md",
     "quality:strict": "npm run typecheck && npm run lint && npm run lint:css && npm run lint:md",
+    "quality:grammar": "npm run check:grammar-quality",
     "test:ci": "npm run quality:check && npm run build",
     "test:smoke": "bash scripts/test-runner.sh smoke-fast",
     "test:smoke:full": "bash scripts/test-runner.sh smoke",
