feat: implement safety measures to prevent rebase and SimpleWord contamination
- Add pre-rebase hook: automatic backup before rebase
- Add post-rebase hook: integrity check after rebase
- Add pre-push hook: final safety check before push
- Update .gitignore: exclude SimpleWord iOS project
- Add EMERGENCY_RECOVERY.md: comprehensive recovery guide

Background:
- 2025-12-11 rebase accident: src/ lost (116 files)
- SimpleWord iOS project contamination discovered
- Implemented automatic prevention system

Safety features:
- Auto backup tags: backup/pre-rebase-YYYYMMDD-HHMMSS
- Backup log: .git/REBASE_BACKUPS.log
- src/ file count validation (minimum 50 files)
- SimpleWord tracking detection and warning
- Required files verification (index.html, package.json, etc.)

--- a/.gitignore
+++ b/.gitignore
@@ -98,6 +98,48 @@ vocabulary_lists/
 # Archive and tools
 tools/archive-scripts/
 tools/archive-reports/
+
+# ========================================
+# ⚠️ SimpleWord iOS Project Exclusion ⚠️
+# ========================================
+# SimpleWordはこのリポジトリに含めない
+# Webアプリ専用リポジトリとして管理
+SimpleWord/
+SimpleWord.xcodeproj/
+SimpleWord 2.xcodeproj/
+SimpleWordTests/
+SimpleWordUITests/
+*.xcworkspace/
+*.xcuserstate
+*.xcscheme
+DerivedData/
+
+# iOS build artifacts
+*.app
+*.ipa
+*.dSYM.zip
+*.dSYM
+
+# Swift Package Manager
+.swiftpm/
+.build/
+
+# CocoaPods
+Pods/
+Podfile.lock
+
+# Carthage
+Carthage/Build/
+
+# fastlane
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots/**/*.png
+fastlane/test_output
+
+# Backup directories (created by safety hooks)
+backup/before-*/
+backup/emergency-*/
 tools/deploy.log
 # Keep archive-github for documentation
 !tools/archive-github/
