security: replace exposed Sentry DSN with placeholder
⚠️ セキュリティー対応:
- 漏洩していた Sentry DSN をダミー値に置き換え
- 本番環境では GitHub Secrets から VITE_SENTRY_DSN を注入する方式に統一
- .env.production はローカル開発用テンプレートとして機能

注意: 過去のコミットに含まれるキーはローテーション済み
- Sentry プロジェクトで新しい DSN を生成
- GitHub Secrets に新しい DSN を登録

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 # Sentry設定（本番環境のみ）
 # DSNは https://sentry.io でプロジェクト作成後に取得
+# 本番環境では GitHub Secrets から VITE_SENTRY_DSN を注入します
 # 例: VITE_SENTRY_DSN=https://xxxxx@o123456.ingest.sentry.io/7890123
-VITE_SENTRY_DSN=https://07605d67d78a4d0bf23b9e993e65939d@o4510403410853888.ingest.us.sentry.io/4510403491790848
+VITE_SENTRY_DSN=your-sentry-dsn-here
