--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "quality:check": "npm run typecheck && npm run lint:errors-only && npm run lint:css && npm run lint:md",
     "quality:strict": "npm run typecheck && npm run lint && npm run lint:css && npm run lint:md",
     "quality:grammar": "npm run check:grammar-quality",
+    "test:unit": "vitest",
+    "test:unit:ui": "vitest --ui",
+    "test:unit:coverage": "vitest --coverage",
     "test:ci": "npm run quality:check && npm run build",
     "test:smoke": "bash scripts/test-runner.sh smoke-fast",
     "test:smoke:full": "bash scripts/test-runner.sh smoke",
@@ -48,12 +51,15 @@
     "@fullhuman/postcss-purgecss": "^7.0.2",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^24.10.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@typescript-eslint/parser": "^8.48.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/ui": "^4.0.15",
     "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
@@ -61,6 +67,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
+    "jsdom": "^27.3.0",
     "lint-staged": "^16.2.7",
     "markdownlint-cli": "^0.46.0",
     "postcss": "^8.5.6",
@@ -69,6 +76,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.48.0",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vitest": "^4.0.15"
   }
 }
