feat: Phase 2 業界標準ツール導入
- EditorConfig: エディタ設定統一
  - .editorconfig: インデント・改行コード・文字コード統一

- Commitlint: コミットメッセージ規約
  - commitlint.config.js: Conventional Commits準拠
  - .husky/commit-msg: コミット時に自動検証
  - 10種類のtype（feat, fix, docs, style, refactor, perf, test, chore, ci, revert）

- Bundle Size監視: ビルドサイズ追跡
  - package.json: size-limit設定追加
  - size, size:why スクリプト追加
  - 目標: Main Bundle 500KB, React Vendor 200KB, CSS 100KB
  - 現在: 151KB, 40KB, 17KB（全て目標以下✅）

- GitHub Actions統合
  - build.yml: Bundle Sizeチェック追加
  - bundle-size.yml: PR時の自動比較・コメント

Changes:
- 新規: .editorconfig, commitlint.config.js, .husky/commit-msg
- 新規: .github/workflows/bundle-size.yml
- 更新: package.json（size-limit設定追加）
- 更新: .github/workflows/build.yml

Impact:
- コード一貫性: EditorConfigで全エディタで統一
- コミット品質: Commitlintで規約遵守
- パフォーマンス: Bundle Size監視で肥大化防止

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,12 @@ jobs:
       - name: ビルド確認
         run: npm run build
       
-      # 6. ビルド成果物の検証
+      # 6.5. Bundle Sizeチェック
+      - name: Bundle Sizeチェック
+        run: npm run size
+        continue-on-error: true
+      
+      # 7. ビルド成果物の検証
       - name: ビルド成果物確認
         run: |
           if [ ! -d "dist" ]; then
