--- a/package.json
+++ b/package.json
@@ -40,8 +40,27 @@
     "test:unit:ui": "vitest --ui",
     "test:unit:coverage": "vitest run --coverage",
     "test:unit:watch": "vitest --watch",
+    "size": "size-limit",
+    "size:why": "size-limit --why",
     "prepare": "husky"
   },
+  "size-limit": [
+    {
+      "name": "Main Bundle",
+      "path": "dist/assets/index-*.js",
+      "limit": "500 KB"
+    },
+    {
+      "name": "React Vendor",
+      "path": "dist/assets/react-vendor-*.js",
+      "limit": "200 KB"
+    },
+    {
+      "name": "CSS Bundle",
+      "path": "dist/assets/index-*.css",
+      "limit": "100 KB"
+    }
+  ],
   "dependencies": {
     "@sentry/react": "^7.120.4",
     "chart.js": "^4.5.1",
@@ -50,9 +69,12 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
     "@eslint/js": "^9.39.1",
     "@fullhuman/postcss-purgecss": "^7.0.2",
     "@playwright/test": "^1.57.0",
+    "@size-limit/file": "^12.0.0",
     "@tailwindcss/forms": "^0.5.10",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -76,6 +98,7 @@
     "markdownlint-cli": "^0.46.0",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
+    "size-limit": "^12.0.0",
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.1",
     "tailwindcss": "^3.4.17",
