--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "test:unit:watch": "vitest --watch",
     "size": "size-limit",
     "size:why": "size-limit --why",
+    "lighthouse": "lhci autorun",
     "prepare": "husky"
   },
   "size-limit": [
@@ -73,6 +74,7 @@
     "@commitlint/config-conventional": "^20.2.0",
     "@eslint/js": "^9.39.1",
     "@fullhuman/postcss-purgecss": "^7.0.2",
+    "@lhci/cli": "^0.15.1",
     "@playwright/test": "^1.57.0",
     "@size-limit/file": "^12.0.0",
     "@tailwindcss/forms": "^0.5.10",
