fix: 問題パネルエラー解消 (型定義・モジュール解決・lint修正)
- TypeScript型定義: CustomWord.sourceに'manual'を追加
- モジュール解決: @/storageエイリアス追加、testsをincludeに追加
- 暗黙的any型: 14箇所に型アノテーション追加
- Markdown lint: 15箇所の空行・言語指定を修正
- CSS: color-function警告対応
- .gitignore: coverageディレクトリを除外

Tests: 132/132 passing (Python 80, TypeScript 52)
実行時間: 1.66秒

--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,7 @@ backup/emergency-*/
 tools/deploy.log
 # Keep archive-github for documentation
 !tools/archive-github/
+
+# Test coverage
+coverage/
+.coverage
