chore: 残りの変更をステージング
- 型定義更新: src/types/customQuestions.ts
- テスト修正: 暗黙的any型対応
- 設定ファイル: tsconfig.json, vite.config.ts更新
- データファイル: 文法問題データ更新
- ワークフロー: quality-nervous-system.yml更新
- カバレッジファイル削除 (.gitignore適用)
- 新規ドキュメント追加 (AI Servant, Maintenance AI等)

--- a/package.json
+++ b/package.json
@@ -40,6 +40,12 @@
     "test:unit:ui": "vitest --ui",
     "test:unit:coverage": "vitest run --coverage",
     "test:unit:watch": "vitest --watch",
+    "test:unit:fast": "SKIP_API_TESTS=true vitest run --no-coverage",
+    "test:unit:critical": "SKIP_API_TESTS=true vitest run tests/integration --no-coverage",
+    "test:python": "python3 -m pytest scripts/test_*.py -q --tb=no",
+    "test:python:fast": "python3 -m pytest scripts/test_*.py -q --tb=no -x",
+    "test:all:fast": "npm run test:python:fast && npm run test:unit:critical",
+    "test:all:full": "npm run test:python && npm run test:unit:fast",
     "size": "size-limit",
     "size:why": "size-limit --why",
     "lighthouse": "lhci autorun",
