feat: GrammarGuideViewのサブタブデザインをScoreBoardスタイルに統一
- サブタブにrounded-t-lg + border-b-2パターンを適用
- レスポンシブサイズ対応（px-2 sm:px-4 py-1.5 sm:py-2 text-xs sm:text-base）
- スマホで絵文字のみ、PCでテキスト表示
- コンテンツエリアを白カード表示に統一（bg-white dark:bg-gray-800 rounded-lg p-4 shadow-md border）
- ダークモード対応を強化
- 絵文字正規表現にuフラグを追加してESLintエラー修正

--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "validate": "python3 scripts/validate_all_data.py",
     "validate:grammar": "python3 scripts/validate_grammar_advanced.py",
     "validate:grammar:analyze": "python3 scripts/analyze_grammar_data_quality.py",
+    "validate:grammar:explanations": "tsx tools/validate-grammar-explanations.ts",
     "check:data-quality": "bash scripts/check-data-quality.sh",
-    "check:grammar-quality": "npm run validate:grammar && npm run validate:grammar:analyze",
+    "check:grammar-quality": "npm run validate:grammar && npm run validate:grammar:analyze && npm run validate:grammar:explanations",
     "lint:css": "stylelint 'src/**/*.css'",
     "lint:css:fix": "stylelint 'src/**/*.css' --fix",
     "typecheck": "tsc --noEmit",
@@ -24,6 +25,7 @@
     "quality:check": "npm run typecheck && npm run lint:errors-only && npm run lint:css && npm run lint:md",
     "quality:strict": "npm run typecheck && npm run lint && npm run lint:css && npm run lint:md",
     "quality:grammar": "npm run check:grammar-quality",
+    "prebuild": "npm run validate:grammar:explanations",
     "test:ci": "npm run quality:check && npm run build",
     "test:smoke": "bash scripts/test-runner.sh smoke-fast",
     "test:smoke:full": "bash scripts/test-runner.sh smoke",
