feat: ダークモード実装を完全削除し、強力な保護機構を設置
- 791件のdark:クラスを一括削除（ライトモードのみに統一）
- ダークモード禁止チェッカー（check-no-dark-mode.mjs）を追加
- pre-commitフックに自動チェックを組み込み
- .ai-instructions/CRITICAL_RULES.md を追加（AI向け厳格ルール）
- .copilot-instructions.md を更新（ダークモード禁止を明記）
- package.jsonにcheck:no-dark-modeコマンドを追加

再実装の余地:
- DARK_MODE_GUIDE.md（完全な仕様書）は保持
- CSS変数定義はすべて残存
- 設計思想・アーキテクチャは文書化済み

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "validate:grammar:explanations": "tsx tools/validate-grammar-explanations.ts",
     "check:data-quality": "bash scripts/check-data-quality.sh",
     "check:grammar-quality": "npm run validate:grammar && npm run validate:grammar:analyze && npm run validate:grammar:explanations",
+    "check:no-dark-mode": "node scripts/check-no-dark-mode.mjs",
     "lint:css": "stylelint 'src/**/*.css'",
     "lint:css:fix": "stylelint 'src/**/*.css' --fix",
     "typecheck": "tsc --noEmit",
