--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.1",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.21.0",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.48.0",
     "vite": "^5.0.8",
